[package]
name = "rustc_metasafe"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
rustc_ast ={ path = "../rustc_ast"}
rustc_hir ={ path = "../rustc_hir"}
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
serde = "1.0.171"

serde_json = "1.0.59"
rustc_middle = { path = "../rustc_middle" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_span = { path = "../rustc_span" }
rustc_resolve = { path = "../rustc_resolve" }
rustc_expand = { path = "../rustc_expand"}


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Diagnostics_Debug",
]
